--- a/work4/report/references.bib
+++ b/work4/report/references.bib
@@ -143,3 +143,13 @@ keywords = {cluster analysis, database mining, visualization}
     year={2024},
     institution={Universitat Politècnica de Catalunya}
 }
+
+@misc{sepin2023comparisonclusteringalgorithmsstatistical,
+      title={Comparison of Clustering Algorithms for Statistical Features of Vibration Data Sets}, 
+      author={Philipp Sepin and Jana Kemnitz and Safoura Rezapour Lakani and Daniel Schall},
+      year={2023},
+      eprint={2305.06753},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2305.06753}, 
+}
