add f_measure plots to report/figures, to fix latex compilation

--- a/work4/report/4-results-and-analysis/2-clustering-with-reduction-vs-without.tex
+++ b/work4/report/4-results-and-analysis/2-clustering-with-reduction-vs-without.tex
@@ -17,8 +17,8 @@ Mean of the F-measure is used to track the performance of the algorithms.
 
 \begin{figure}[!h]
     \centering
-    \includegraphics[width=0.45\textwidth]{../data/5_metrics_plots/f_measure_comparison_mushroom.png}
-    \includegraphics[width=0.45\textwidth]{../data/5_metrics_plots/f_measure_comparison_vowel.png}
+    \includegraphics[width=0.45\textwidth]{figures/f_measure_comparison_mushroom.png}
+    \includegraphics[width=0.45\textwidth]{figures/f_measure_comparison_vowel.png}
     \caption{Mean F-measure score with and without PCA for Mushroom (left) and Vowel (right) datasets.}
 \label{fig:clustering-results}
 \end{figure}
