--- a/work4/report/report.tex
+++ b/work4/report/report.tex
@@ -1,6 +1,6 @@
 \documentclass[titlepage]{article}
 \usepackage[utf8]{inputenc}
-\usepackage[margin=0.75in]{geometry}
+\usepackage[]{geometry}
 \usepackage{booktabs}
 \usepackage{array}
 \usepackage{hyperref}
