remove the appendix for now

--- a/work4/report/report.tex
+++ b/work4/report/report.tex
@@ -29,6 +29,6 @@
 \input{5-conclusion}
 \newpage
 \bibliography{references}
-\newpage
-\input{6-appendix}
+% \newpage
+% \input{6-appendix}
 \end{document}
