reduc margin, add title

--- a/work4/report/report.tex
+++ b/work4/report/report.tex
@@ -1,6 +1,6 @@
 \documentclass[titlepage]{article}
 \usepackage[utf8]{inputenc}
-\usepackage[]{geometry}
+\usepackage[margin=0.75in]{geometry}
 \usepackage{booktabs}
 \usepackage{array}
 \usepackage{hyperref}
@@ -13,7 +13,8 @@
 
 \bibliographystyle{plain}
 
-\title{Work 4}
+\title{Dimensionality Reduction and Clustering Analysis:\\
+\large A Comparative Study of PCA Implementation and Visualization Techniques}
 \author{Carlos Jiménez, Sheena Lang, Zachary Parent, and Kacper Poniatowski}
 \date{\today}
 
